removed classes from map container to ensure full width; adjusted margin for sidebar to remove gap

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,6 +33,6 @@ $offcanvas-width: 250px;
 
 @media (min-width: 960px) {
     .ch-sidebar-left+.ch-main {
-        padding-left: 250px;
+        padding-left: 240px;
     }
 }
